--- a/divas/aretha.html
+++ b/divas/aretha.html
@@ -20,6 +20,16 @@
 
 </header>
 
+<nav>
+    <ul>
+        <li><a href="../index.html">Otras interpretes</a></li>
+        <li><a href="dionne.html">Dione Warwick</a></li>
+        <li><a href="diana.html">Diana Ross</a></li>
+        <li><a href="etta.html">Etta James</a></li>
+    </ul>
+    <br>
+</nav>
+
 <aside>
     <p>
         Probablemente la más reconocida intérprete de Soul de la historia, y la que mejores críticas recibe actualmente
