--- a/divas/dionne.html
+++ b/divas/dionne.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dionne Warwick</title>
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
 <header>
@@ -18,6 +19,16 @@
     </figure>
 
 </header>
+
+<nav>
+    <ul>
+        <li><a href="../index.html">Otras interpretes</a></li>
+        <li><a href="aretha.html">Aretha Franklin</a></li>
+        <li><a href="diana.html">Diana Ross</a></li>
+        <li><a href="etta.html">Etta James</a></li>
+    </ul>
+    <br>
+</nav>
 
 <aside>
     <p>
@@ -52,4 +63,6 @@
     <p>En marzo de 2013, saltó la noticia de que la cantante se había declarado en bancarrota, con deudas acumuladas de
         unos diez millones de dólares.</p></main>
 </body>
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/java.js"></script>
 </html>
