--- a/divas/diana.html
+++ b/divas/diana.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Etta James</title>
+    <title>Diana Ross</title>
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
 <header>
@@ -18,6 +19,16 @@
     </figure>
 
 </header>
+
+<nav>
+    <ul>
+        <li><a href="../index.html">Otras interpretes</a></li>
+        <li><a href="aretha.html">Aretha Franklin</a></li>
+        <li><a href="dionne.html">Dione Warwick</a></li>
+        <li><a href="etta.html">Etta James</a></li>
+    </ul>
+    <br>
+</nav>
 
 <aside>
     <p>
@@ -40,5 +51,7 @@
     <p> Con casi 60 años de carrera, las ventas de sus álbumes y sencillos tienen un total estimado de más de <strong>100
             millones de copias</strong>, lo cual la convierte en una de artistas musicales con mayores ventas.</p>
 </main>
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/java.js"></script>
 </body>
 </html>
