--- a/divas/etta.html
+++ b/divas/etta.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Etta James</title>
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
 <header>
@@ -18,6 +19,17 @@
     </figure>
 
 </header>
+
+<nav>
+    <ul>
+        <li><a href="../index.html">Otras interpretes</a></li>
+        <li><a href="aretha.html">Aretha Franklin</a></li>
+        <li><a href="diana.html">Diana Ross</a></li>
+        <li><a href="dionne.html">Dionne Warwick</a></li>
+    </ul>
+    <br>
+</nav>
+
 
 <aside>
     <p>
@@ -33,4 +45,6 @@
     <p>Era una mujer de carácter y todo lo que cantaba sonaba a conocido y a verdad. Temas de siempre: el abandono, la queja, y con mucho movimiento. “No me gustan los lugares donde la gente no puede bailar” declaraba. Pese a su obesidad, se movía en el escenario con convicción aún cuando esa la obesidad y su adicción a la heroína, casi consiguieron sepultarla en el anonimato hasta que, en 1988. Ahí regresó con el álbum <em>Seven year Itch</em>, que consolidó su leyenda con <em>Mystery Lady</em>, dedicado a <strong>Billie Holiday</strong>, de 1994, o <em>Life, love and the blues</em>, de 1998, que la muestran como una de las grandes protagonistas del blues y soul de la segunda parte del siglo XX y de lo que llevamos del XXI, al que llegó con fuerzas renovadas.</p>
 </main>
 </body>
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/java.js"></script>
 </html>
